syntax = "proto3";
package secret;
option go_package = "/pb";

service Secrets {
  rpc CreateSecret (CreateSecretRequest) returns (CreateSecretResponse) {}
  rpc GetSecrets (GetSecretsRequest) returns (GetSecretsResponse) {}
  rpc DeleteSecret (DeleteSecretRequest) returns (DeleteSecretResponse) {}
}

message Data {
  string title = 1;
  string value = 2;
}

message CreateSecretRequest {
  string type = 1;
  string meta_data = 2;
  repeated Data data = 3;
}

message CreateSecretResponse {
  string status = 1;
}

message GetSecretsRequest {

}

message GetSecretsResponse {
  message Secret {
    string id = 1;
    string type = 2;
    string meta_data = 3;
    repeated Data data = 4;
  }
  string status = 1;
  repeated Secret secrets = 2;
}

message DeleteSecretRequest {
  string secret_id = 1;
}

message DeleteSecretResponse {
  string status = 1;
}
